<resources>
    <string name="app_name">Contacts</string>
    <string name="name">Nombre completo</string>
    <string name="birthday">Fecha de nacimiento</string>
    <string name="telephone">Teléfono</string>
    <string name="email">E-mail</string>
    <string name="contact_description">Descripción Contacto</string>
    <string name="next_button">Siguiente</string>

    <string name="data_confirmation_title">Confirmar Datos</string>
    <string name="data_confirmation_birthday">Fecha de nacimiento:</string>
    <string name="data_confirmation_telephone">Teléfono:</string>
    <string name="data_confirmation_email">E-mail: </string>
    <string name="data_confirmation_contact_description">Descripción:</string>
    <string name="data_confirmation_edit_data_button">Editar Datos</string>

    <string name="intent_name">INTENT_NAME</string>
    <string name="intent_birthday">INTENT_BIRTHDAY</string>
    <string name="intent_telephone">INTENT_TELEPHONE</string>
    <string name="intent_email">INTENT_EMAIL</string>
    <string name="intent_contact_description">INTENT_CONTACT_DESCRIPTION</string>

</resources>
